--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Web Inspo</title>
+    <title>Inspo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
